--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ header {
 	padding: 30px 0;
 	text-align: center;
 	background-color: white;
+	position: fixed;
+	top: 0px;
 }
 
 #search {
@@ -33,6 +35,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 108px;
 }
 
 img {
